Fix: Reduced code duplication and edited expected values to match